refactor(GuiManager#handleScreen): don't use `Class.newInstance`